{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 70,
  "lineage": "efc35a16-cd6b-081c-cc9b-88f90a7bb808",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-03dcedc81ea3e7e27",
            "arn": "arn:aws:ec2:ap-south-1:878764777437:instance/i-039de3dc7195aae41",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "filter": [
              {
                "name": "tag:es",
                "values": [
                  "es_node"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "elasticsearch_discovery_instance_profile",
            "id": "i-039de3dc7195aae41",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "key_name": "aws-technogise-free-tier",
            "monitoring": true,
            "network_interface_id": "eni-0e56e0d703b361782",
            "private_dns": "ip-10-0-1-55.ap-south-1.compute.internal",
            "private_ip": "10.0.1.55",
            "public_dns": "ec2-13-234-76-99.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.76.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-090694e3aa16a2eb3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05aede88398af3871",
            "tags": {
              "es": "es_node",
              "name": "elasticsearch-node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0952709c4b5dd775a"
            ]
          },
          "depends_on": [
            "aws_autoscaling_group.es_asg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09e128ab8ff0fc2f0",
            "owner_id": "878764777437",
            "tags": {
              "Name": "elasticsearch-igw"
            },
            "vpc_id": "vpc-016dcf1aaf92538f0"
          },
          "depends_on": [
            "aws_vpc.es_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0583bd0ee8d52387f",
            "owner_id": "878764777437",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e128ab8ff0fc2f0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-016dcf1aaf92538f0"
          },
          "depends_on": [
            "aws_internet_gateway.internet_gw",
            "aws_vpc.es_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee107aabfdea6838",
            "route_table_id": "rtb-0583bd0ee8d52387f",
            "subnet_id": "subnet-05aede88398af3871"
          },
          "depends_on": [
            "aws_route_table.route_table",
            "aws_subnet.es_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticsearch_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:878764777437:security-group/sg-0952709c4b5dd775a",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0952709c4b5dd775a",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.101.70.203/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "103.101.70.203/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "elastic-search-sg-20190830053230226000000001",
            "name_prefix": "elastic-search-sg-",
            "owner_id": "878764777437",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-016dcf1aaf92538f0"
          },
          "depends_on": [
            "aws_vpc.es_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "es_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:878764777437:subnet/subnet-05aede88398af3871",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05aede88398af3871",
            "map_public_ip_on_launch": true,
            "owner_id": "878764777437",
            "tags": {
              "Name": "elasticsearch-subnet"
            },
            "vpc_id": "vpc-016dcf1aaf92538f0"
          },
          "depends_on": [
            "aws_vpc.es_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "es_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:878764777437:vpc/vpc-016dcf1aaf92538f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0190e8f0f25d7dfff",
            "default_route_table_id": "rtb-03a7c25fb2f331340",
            "default_security_group_id": "sg-0f8dc5e13ec0095ac",
            "dhcp_options_id": "dopt-db7593b0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-016dcf1aaf92538f0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03a7c25fb2f331340",
            "owner_id": "878764777437",
            "tags": {
              "Name": "elasticsearch-vpc"
            }
          }
        }
      ]
    }
  ]
}